@@ -1,3 +1,8 @@
+2019-08-21  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gnat.dg/prot9.adb, gnat.dg/prot9_gen.ads,
+	gnat.dg/prot9_pkg1.ads, gnat.dg/prot9_pkg2.ads: New testcase.
+
 2019-08-21  Javier Miranda  <miranda@adacore.com>
 
 	* gnat.dg/implicit_param.adb, gnat.dg/implicit_param_pkg.ads:
