@@ -1,3 +1,8 @@
+2019-08-21  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* exp_util.adb (Finalize_Address): Deal consistently with
+	subtypes of private protected types.
+
 2019-08-21  Piotr Trojanek  <trojanek@adacore.com>
 
 	* exp_util.adb (Corresponding_Runtime_Package): Use high-level
